Routerの設定と実装

--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -8,7 +8,7 @@ WORKDIR ${HOME}
 
 # ローカル上のpackageをコンテナにコピーしてインストールする
 COPY package*.json ./
-RUN yarn install
+RUN npm install
 
 
 # コンテナにNextプロジェクトをコピー
