--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -4,7 +4,8 @@
     "lib": [
       "dom",
       "dom.iterable",
-      "esnext"
+      "esnext",
+      "ES2018"
     ],
     "allowJs": true,
     "skipLibCheck": true,
