Fixed Dockerfile docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,14 @@
 version: "3.8"
-
 services:
   front:
-      build:
-        context: ./front
-        args:
-          WORKDIR: $WORKDIR
-      command: npm start
-      volumes:
-        - "./front:/$WORKDIR"
-      ports:
-        - "$FRONT_PORT:3000"
+    build: ./
+    container_name: node
+    volumes:
+      - ./front:/front
+    working_dir: /front
+    ports:
+      - 3000:3000
+    tty: true
+    stdin_open: true
+    environment:
+      - CHOKIDAR_USEPOLLING=true
