--- a/front/package.json
+++ b/front/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "app",
+  "name": "front",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/icons": "^1.0.4",
     "@chakra-ui/react": "^1.3.4",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.6.0",
